--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "version": "1.0.4",
+  "version": "1.0.3",
   "name": "ion-intl-tel-input",
   "title": "Ion Intl Tel Input",
   "description": "An Ionic component for International Phone Number Input, that allows all countries, validation with google phone lib, limited countries, preferred countries, virtual scrolling and much more.",
   "author": {
-    "name": "James Gronowski",
-    "url": "https://github.com/JimmehG"
+    "name": "Azzam Asghar",
+    "url": "https://github.com/azzamasghar1"
   },
   "license": "See license in LICENSE",
   "homepage": "https://github.com/azzamasghar1/ion-intl-tel-input",
